[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaonavi-api-executor"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Kaonavi API Executor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.3",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-pythonpath>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-pythonpath>=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "online: 実APIを使用するテスト",
]
