[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaonavi-api-executor"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Kaonavi API Executor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-pythonpath>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-pythonpath>=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "online: 実APIを使用するテスト",
]

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
warn_unused_configs = true
